# Bilibili-Down

./: Cargo.toml  LICENSE  README.md  README_en.md  build.rs
.github/workflows/: build-release.yml  claude.yml  codex-mention.yml
src/: app.rs  bilibili.rs  config.rs  downloader.rs  main.rs
src/ui/: download_queue.rs  home.rs  login.rs  mod.rs  settings.rs  video_detail.rs
website/: package.json  pnpm-lock.yaml
website/app/: globals.css  layout.tsx  page.tsx
website/components/: footer.tsx  header.tsx  theme-provider.tsx  theme-toggle.tsx
