[package]
name = "bilibili-down"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
anyhow = "1.0"
dirs = "5.0"
image = "0.25"
egui_extras = { version = "0.29", features = ["image"] }
base64 = "0.22"
qrcode = "0.14"
chrono = "0.4"
regex = "1.10"
futures = "0.3"
parking_lot = "0.12"
hex = "0.4"
url = "2.5"
bytes = "1.5"
rfd = "0.15"
env_logger = "0.11"
uuid = { version = "1.11", features = ["v4"] }
aria2-ws = "0.2"
winreg = "0.52"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "tlhelp32",
    "processthreadsapi", 
    "handleapi",
    "winnt",
    "minwindef",
    "winbase"
]}