[package]
name = "bilibili-down"
version = "0.2.0"
edition = "2021"

[package.metadata.winresource]
OriginalFilename = "bilibili-down.exe"
LegalCopyright = "Copyright © NORMAL-EX 2025-present"

[dependencies]
md5 = "0.7"
eframe = "0.29"
egui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
anyhow = "1.0"
dirs = "5.0"
image = "0.25"
egui_extras = { version = "0.29", features = ["image"] }
base64 = "0.22"
qrcode = "0.14"
chrono = "0.4"
regex = "1.10"
futures = "0.3"
parking_lot = "0.12"
hex = "0.4"
url = "2.5"
bytes = "1.5"
rfd = "0.15"
env_logger = "0.11"
uuid = { version = "1.11", features = ["v4"] }
aria2-ws = "0.2"
arboard = "3.4"
lazy_static = "1.4"
urlencoding = "2.1"
winit = "0.29"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
ico = "0.3"
win-toast-notify = "0.1.6"
winapi = { version = "0.3", features = [
    "tlhelp32",
    "processthreadsapi",
    "handleapi",
    "winnt",
    "minwindef",
    "winbase",
    "shellapi",
    "shobjidl_core",
    "dwmapi",
    "winuser"
]}
windows = { version = "0.52", features = [
    "Foundation",
    "Data_Xml_Dom",
    "UI_Notifications"
]}

[target.'cfg(not(windows))'.dependencies]
notify-rust = "4.11"

[target.'cfg(target_os = "macos")'.dependencies]
png = "0.17"

[target.'cfg(target_os = "linux")'.dependencies]
png = "0.17"

[build-dependencies]
winresource = "0.1"
